0.11.8:
 - fix: check the circle name before uploading (#64)
 - setup: bump dclab from 0.45.0 to 0.46.0
0.11.7
 - setup: bump dclab from 0.43.1 to 0.45.0 (scalar feature support)
0.11.6
 - fix: set visibility to private based on available licenses
 - fix: calling the CLI 'dcoraid-upload-task --help' raised exception
 - fix: add timeout to api.post
 - fix: remove time DCOR-Aid waits for the server from average upload rate
 - enh: unselected license in upload dialog for example data
 - enh: increase logging verbosity
0.11.5
 - enh: increase logging verbosity
 - setup: bump dclab from 0.43.0 to 0.43.1
0.11.4
 - build: use InnoSetup "autopf" feature for installation directory
 - enh: add return values to command-line uploader
0.11.3
 - setup: bump dclab from 0.42.0 to 0.43.0 (improved compression)
 - setup: include zstandard library in distribution installer
0.11.2
 - fix: make sure self-signed SSL certificates of DCOR-med instances
   are used everywhere (#61)
 - fix: raise error when an .rtdc file contains undefined features (#55)
 - ref: move dcor access token code to dclab
 - setup: bump dclab from 0.40.0 to 0.42.0
0.11.1
 - fix: CLI did not verify individual upload steps (#59)
 - enh: add additional step "wait-dcor" during verification task (#54)
 - ref: get rid of distutils dependency
0.11.0
 - feat: support downloading condensed .rtdc files
 - enh: allow user to choose download location via preferences (#43)
 - ref: download jobs no longer are identified via `resource_id`, but
   via `job_id`, because we now have condensed resources
 - setup: bump dclab from 0.39.15 to 0.40.0
0.10.0
 - feat: display paths to resources in Upload tab (#56)
 - fix: make sure DCOR-Aid starts when the server is not reachable (#57)
 - fix: make sure DCOR-Aid starts when the API token is wrong (#57)
 - enh: add with_api_key and with_correct_version keyword arguments to
   CKANAPI.is_available
 - ref: do not update login status asyncronously in the background