@@ -1,5 +1,6 @@
 0.11.8:
  - fix: check the circle name before uploading (#64)
+ - fix: force initialization of jobs in upload widget (#63)
  - setup: bump dclab from 0.45.0 to 0.46.0
 0.11.7
  - setup: bump dclab from 0.43.1 to 0.45.0 (scalar feature support)
